--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ build = "build.rs"
 [dependencies]
 [dependencies.dash_mndiff]
 git = "https://github.com/dashevo/masternode-diff-processor"
-branch = "simple-metrics"
-version = "0.1.0"
+branch = "dip-0024"
+version = "0.1.1"
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashevo/rs-merk-verify-c-binding"
 branch = "for-use-in-main-crate"
