--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 [dependencies]
 [dependencies.dash_mndiff]
 git = "https://github.com/dashevo/masternode-diff-processor"
-branch = "primitives-migration"
+branch = "processor-test"
 version = "0.2.1"
 
 [dependencies.rs-merk-verify-c-binding]
