--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ cbindgen = "0.20.0"
 
 [lib]
 name = "dash_shared_core"
-#crate-type = ["staticlib", "cdylib"]
+crate-type = ["staticlib", "cdylib"]
 
 [profile.release]
 lto = "thin"
