--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ publish = false
 [dependencies]
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashevo/masternode-diff-processor"
-branch = "dev"
+branch = "fix/core-18-fixes"
 version = "0.3.3"
 
 [dependencies.dash-spv-models]
 git = "https://github.com/pankcuf/dash-spv-models"
-branch = "master"
+branch = "fix/core-18-fixes"
 version = "0.2.3"
 [dependencies.dash-spv-ffi]
 git = "https://github.com/pankcuf/dash-spv-ffi"
