--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash_shared_core"
-version = "0.1.9"
+version = "0.2.1"
 edition = "2021"
 build = "build.rs"
 publish = false
@@ -8,17 +8,17 @@ publish = false
 [dependencies]
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashpay/masternode-diff-processor"
-branch = "fix/core-18-fixes"
-version = "0.3.3"
+branch = "main"
+version = "0.3.4"
 
 [dependencies.dash-spv-models]
 git = "https://github.com/pankcuf/dash-spv-models"
-branch = "fix/core-18-fixes"
-version = "0.2.3"
+branch = "master"
+version = "0.2.4"
 [dependencies.dash-spv-ffi]
 git = "https://github.com/pankcuf/dash-spv-ffi"
-branch = "fix/core-18-fixes"
-version = "0.2.3"
+branch = "master"
+version = "0.2.4"
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
 branch = "for-use-in-main-crate"
