--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,9 @@ publish = false
 [dependencies]
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashpay/masternode-diff-processor"
-branch = "main"
+branch = "improvement/merge-libs"
 version = "0.3.7"
 
-[dependencies.dash-spv-models]
-git = "https://github.com/pankcuf/dash-spv-models"
-branch = "master"
-version = "0.2.6"
-[dependencies.dash-spv-ffi]
-git = "https://github.com/pankcuf/dash-spv-ffi"
-branch = "master"
-version = "0.2.6"
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
 branch = "for-use-in-main-crate"
@@ -26,10 +18,6 @@ version = "0.1.3"
 
 #[dependencies.dash-spv-masternode-processor]
 #path = "../masternodes-diff-processor"
-#[dependencies.dash-spv-ffi]
-#path = "../dash-spv-ffi"
-#[dependencies.dash-spv-models]
-#path = "../dash-spv-models"
 
 
 [build-dependencies]
