--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash_shared_core"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
 build = "build.rs"
 publish = false
@@ -9,7 +9,7 @@ publish = false
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashpay/masternode-diff-processor"
 branch = "main"
-version = "0.3.10"
+rev = "74200eb"
 
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
