--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ publish = false
 [dependencies]
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashpay/masternode-diff-processor"
-branch = "main"
-version = "0.3.10"
+branch = "feature/bls-core-v0.19"
 
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
