--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ build = "build.rs"
 publish = false
 
 [dependencies]
+
 [dependencies.dash-spv-masternode-processor]
 git = "https://github.com/dashpay/masternode-diff-processor"
-branch = "feature/keys"
+rev = "dcfc04f"
+#branch = "feature/keys"
 
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
@@ -24,7 +26,8 @@ cbindgen = "0.24.3"
 
 [lib]
 name = "dash_shared_core"
-crate-type = ["staticlib", "cdylib"]
+#crate-type = ["staticlib", "cdylib"]
+crate-type = ["staticlib"]
 
 [profile.release]
 lto = "thin"
