--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,7 @@ cbindgen = "0.24.3"
 
 [lib]
 name = "dash_shared_core"
-#crate-type = ["staticlib", "cdylib"]
-crate-type = ["staticlib"]
+crate-type = ["staticlib", "cdylib"]
 
 [profile.release]
 lto = "thin"
