--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ name = "dash_shared_core"
 crate-type = ["staticlib", "cdylib"]
 
 [profile.release]
-lto = "thin"
-opt-level = 3
+#lto = "thin"
+#opt-level = 3
+debug = true
 
