--- a/.github/workflows/apple_bindings.yml
+++ b/.github/workflows/apple_bindings.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Build Apple frameworks
         working-directory: ./dash_spv_apple_bindings
         run: |
-          ./build_macos_pod.sh && ./build_ios_pod.sh
+          ./dash-spv-apple-bindings/build_macos_pod.sh && ./dash-spv-apple-bindings/build_ios_pod.sh
