--- a/.github/workflows/apple-bindings.yml
+++ b/.github/workflows/apple-bindings.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout dash-shared-core
         uses: actions/checkout@v2
         with:
-          path: dash_shared_core
+          path: dash-shared-core
           submodules: recursive
       - name: Create LFS file list
         run: |
