--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -13,7 +13,7 @@ unstable = []
 rand = ["secp256k1/rand-std"]
 secp-lowmemory = ["secp256k1/lowmemory"]
 secp-recovery = ["secp256k1/recovery"]
-
+generate-dashj-tests = []
 # At least one of std, no-std must be enabled.
 #
 # The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
@@ -39,10 +39,10 @@ bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
 log = { version = "0.4.*", features = ["std"] }
 simplelog = "0.12.1"
 dirs-next = "2.0.0"
-[dev-dependencies]
-base64 = "0.21.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
+[dev-dependencies]
+base64 = "0.21.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [build-dependencies]
