--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -32,7 +32,7 @@ bls-signatures = { git = "https://github.com/dashevo/bls-signatures", rev = "a55
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
 dirs-next = "2.0.0"
-ed25519-dalek = "2.0.0-pre.0"
+ed25519-dalek = "2.0.0-rc.3"
 libc = "0.2.132"
 log = { version = "0.4.*", features = ["std"] }
 rs-x11-hash = "0.1.8"
