--- a/.github/workflows/masternode-processor.yml
+++ b/.github/workflows/masternode-processor.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     name: Cargo test
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
       - name: Install automake
         run: |
