--- a/.github/workflows/apple-bindings.yml
+++ b/.github/workflows/apple-bindings.yml
@@ -1,4 +1,4 @@
-name: XCode Framework
+name: Tests and XCode framework
 
 on:
   push:
@@ -42,7 +42,7 @@ jobs:
         working-directory: ./dash-shared-core
         run: |
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/homebrew/lib/
-          cargo test --package dash_spv_apple_bindings --lib tests --verbose
+          cargo test --lib tests --verbose
       - name: Build Apple frameworks
         working-directory: ./dash-shared-core/dash-spv-apple-bindings
         run: |
