--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,13 +13,13 @@ on:
 jobs:
   build:
     name: Code coverage
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
       - name: Install automake
         run: |
           brew install automake
       - name: Checkout dash-shared-core
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 2
           path: dash-shared-core
