--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -32,9 +32,14 @@ bls-signatures = { git = "https://github.com/dashevo/bls-signatures", rev = "a55
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
 dirs-next = "2.0.0"
-ed25519-dalek = "2.0.0-rc.3"
+ed25519-dalek = "2"
 libc = "0.2.132"
 log = { version = "0.4.*", features = ["std"] }
+#rs-ffi-interfaces = { git = "https://github.com/pankcuf/rs-ffi-macro.git", package = "rs-ffi-interfaces" }
+#rs-ffi-macro-derive = { git = "https://github.com/pankcuf/rs-ffi-macro.git", package = "rs-ffi-macro-derive" }
+rs-ffi-interfaces = { path = "../../rs-ffi-macro/rs-ffi-interfaces" }
+rs-ffi-macro-derive = { path = "../../rs-ffi-macro/rs-ffi-macro-derive" }
+
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
 serde = { version = "1.0.144", features = ["derive"] }
