--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -11,12 +11,13 @@ publish = true
 blake3 = "1.3.2"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
 rs-x11-hash = "0.1.8"
-rs-ffi-interfaces = { git = "https://github.com/pankcuf/rs-ffi-macro.git", branch = "feat/unwrap-generics", package = "rs-ffi-interfaces" }
-rs-ffi-macro-derive = { git = "https://github.com/pankcuf/rs-ffi-macro.git", branch = "feat/unwrap-generics", package = "rs-ffi-macro-derive" }
+#ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", branch = "feat/unwrap-generics", package = "ferment-interfaces" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment.git", branch = "feat/unwrap-generics", package = "ferment-macro" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 
-#rs-ffi-interfaces = { path = "../../rs-ffi-macro/rs-ffi-interfaces" }
-#rs-ffi-macro-derive = { path = "../../rs-ffi-macro/rs-ffi-macro-derive" }
+ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
+ferment-macro = { path = "../../ferment/ferment-macro" }
+
 [dev-dependencies]
 libc = "0.2.146"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
@@ -26,6 +27,7 @@ dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", fea
 
 [build-dependencies]
 cbindgen = "0.24.3"
+ferment = { path = "../../ferment/ferment" }
 
 [lib]
 name = "dash_spv_apple_bindings"
