--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -36,10 +36,10 @@ dirs-next = "2.0.0"
 ed25519-dalek = "2"
 libc = "0.2.132"
 log = { version = "0.4.*", features = ["std"] }
-#rs-ffi-interfaces = { git = "https://github.com/pankcuf/rs-ffi-macro.git", package = "rs-ffi-interfaces" }
-#rs-ffi-macro-derive = { git = "https://github.com/pankcuf/rs-ffi-macro.git", package = "rs-ffi-macro-derive" }
-rs-ffi-interfaces = { path = "../../rs-ffi-macro/rs-ffi-interfaces" }
-rs-ffi-macro-derive = { path = "../../rs-ffi-macro/rs-ffi-macro-derive" }
+#ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-interfaces" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
+ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
+ferment-macro = { path = "../../ferment/ferment-macro" }
 
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
@@ -54,6 +54,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [build-dependencies]
 cbindgen = "0.24.3"
+ferment = { path = "../../ferment/ferment" }
 
 
 [lib]
