--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -11,6 +11,7 @@ publish = true
 
 [dependencies.dash-spv-masternode-processor]
 path = "../dash-spv-masternode-processor"
+features = ["default", "generate-dashj-tests"]
 
 [dependencies.rs-merk-verify-c-binding]
 git = "https://github.com/dashpay/rs-merk-verify-c-binding"
