--- a/.github/workflows/apple-bindings.yml
+++ b/.github/workflows/apple-bindings.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Run tests
         working-directory: ./dash-shared-core
         run: |
+          GMP_PREFIX=$(brew --prefix gmp 2>/dev/null)
+          export CGO_LDFLAGS=$CGO_LDFLAGS:$(GMP_PREFIX)/lib
+          export CGO_CXXFLAGS=$CGO_CXXFLAGS:$(GMP_PREFIX)/include
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/homebrew/lib/
           cargo test --lib --verbose
       - name: Build Apple frameworks
