--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -10,13 +10,12 @@ publish = true
 [dependencies]
 blake3 = "1.3.2"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
-rs-x11-hash = "0.1.8"
-#ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", branch = "feat/unwrap-generics", package = "ferment-interfaces" }
-#ferment-macro = { git = "https://github.com/pankcuf/ferment.git", branch = "feat/unwrap-generics", package = "ferment-macro" }
-rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
-
 ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
+#ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-interfaces" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
+rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
+rs-x11-hash = "0.1.8"
 
 [dev-dependencies]
 libc = "0.2.146"
@@ -28,6 +27,7 @@ dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", fea
 [build-dependencies]
 cbindgen = "0.24.3"
 ferment = { path = "../../ferment/ferment" }
+#ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
 
 [lib]
 name = "dash_spv_apple_bindings"
