--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -55,6 +55,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 [build-dependencies]
 cbindgen = "0.24.3"
 ferment = { path = "../../ferment/ferment" }
+#ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
 
 
 [lib]
