chore: disable debug, enhance log msg, disable java test generation

--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 publish = false
 
 [features]
-default = ["std", "secp-recovery", "generate-dashj-tests"]
+default = ["std", "secp-recovery"]
 unstable = []
 rand = ["secp256k1/rand-std"]
 secp-lowmemory = ["secp256k1/lowmemory"]
