--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -10,6 +10,7 @@ publish = true
 [dependencies]
 blake3 = "1.3.2"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
+dash-spv-coinjoin = { path = "../dash-spv-coinjoin" }
 ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
 #ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-interfaces" }
@@ -23,6 +24,7 @@ reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default", "test-helpers"] }
+dash-spv-coinjoin = { path = "../dash-spv-coinjoin", features = ["test-helpers"] }
 
 [build-dependencies]
 cbindgen = "0.24.3"
