--- a/dash-spv-coinjoin/Cargo.toml
+++ b/dash-spv-coinjoin/Cargo.toml
@@ -17,6 +17,7 @@ dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
 #ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
 ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
+byte = "0.2"
 
 [build-dependencies]
 cbindgen = "0.24.3"
