--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -8,26 +8,79 @@ build = "build.rs"
 publish = true
 
 [dependencies]
+anyhow = { version = "1.0.75" }
 blake3 = "1.3.2"
+dash-sdk = { path = "../../platform/packages/rs-sdk" }
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
+dash-spv-platform = { path = "../dash-spv-platform" }
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
+    "std",
+    "secp-recovery",
+    "rand",
+    "signer",
+    "serde",
+], default-features = false, branch = "master" }
+dpp = { path = "../../platform/packages/rs-dpp", features = ["state-transitions"] }
+drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
+fancy-regex = "0.13.0"
 ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
 #ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-interfaces" }
 #ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
+grovedb-version = "1.0.0-rc.2"
+indexmap = { version = "2.0.2", features = ["serde"] }
+jsonschema = "0.18.0"
+platform-value = { path = "../../platform/packages/rs-platform-value" }
+platform-version = { path = "../../platform/packages/rs-platform-version" }
+regex = { version = "1.10.4" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 rs-x11-hash = "0.1.8"
 
+serde_json = { version = "1.0", features = ["preserve_order"] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+tokio-util = { version = "0.7.10" }
+
 [dev-dependencies]
 libc = "0.2.146"
-reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default", "test-helpers"] }
 
 [build-dependencies]
-cbindgen = "0.24.3"
+cbindgen = "0.26.0"
 ferment = { path = "../../ferment/ferment" }
 #ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
+
+[features]
+cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
+data-contract-cbor-conversion = ["dpp/data-contract-cbor-conversion"]
+data-contract-json-conversion = ["dpp/data-contract-json-conversion"]
+data-contract-value-conversion = ["dpp/data-contract-value-conversion"]
+document-cbor-conversion = ["dpp/document-cbor-conversion"]
+document-json-conversion = ["dpp/document-json-conversion"]
+document-value-conversion = ["dpp/document-value-conversion"]
+extended-document = ["dpp/extended-document"]
+factories = ["dpp/factories"]
+fee-distribution = ["dpp/fee-distribution"]
+fixtures-and-mocks = ["dpp/fixtures-and-mocks"]
+identity-cbor-conversion = ["dpp/identity-cbor-conversion"]
+identity-json-conversion = ["dpp/identity-json-conversion"]
+identity-value-conversion = ["dpp/identity-value-conversion"]
+json = ["platform-value/serde_json"]
+json-object = ["dpp/json-object"]
+json-schema-validation = ["dpp/json-schema-validation"]
+message-signing = ["dpp/message-signing"]
+mocks = ["dash-sdk/mocks"]
+mock-versions = ["platform-version/mock-versions"]
+platform-value = ["dpp/platform-value"]
+serde = ["dash-spv-masternode-processor/serde"]
+state-transitions = ["dpp/state-transitions"]
+state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
+state-transition-validation = ["dpp/state-transition-validation"]
+state-transition-signing = ["dpp/state-transition-signing"]
+std = ["platform-value/std"]
+validation = ["dpp/validation"]
 
 [lib]
 name = "dash_spv_apple_bindings"
