--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -14,6 +14,7 @@ rand = ["secp256k1/rand-std"]
 secp-lowmemory = ["secp256k1/lowmemory"]
 secp-recovery = ["secp256k1/recovery"]
 generate-dashj-tests = []
+serde = []
 # At least one of std, no-std must be enabled.
 #
 # The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
@@ -37,9 +38,9 @@ libc = "0.2.132"
 log = { version = "0.4.*", features = ["std"] }
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
-serde = { version = "1.0.144", features = ["derive"] }
+serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.85"
-simplelog = "0.12.1"
+simplelog = "0.12.2"
 zeroize = "1.5.7"
 
 [dev-dependencies]
