--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -20,7 +20,9 @@ dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
     "signer",
     "serde",
 ], default-features = false, branch = "master" }
+
 dpp = { path = "../../platform/packages/rs-dpp", features = ["state-transitions"] }
+drive = { path = "../../platform/packages/rs-drive" }
 drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
 fancy-regex = "0.13.0"
 ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
@@ -33,9 +35,10 @@ jsonschema = "0.18.0"
 platform-value = { path = "../../platform/packages/rs-platform-value" }
 platform-version = { path = "../../platform/packages/rs-platform-version" }
 regex = { version = "1.10.4" }
+rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 rs-x11-hash = "0.1.8"
-
+dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore-rpc", tag = "v0.15.2" }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
