feat: global logging framework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "dash-spv-apple-bindings",
     "dash-spv-example-app",
     "dash-spv-masternode-processor",
+    "logging",
     "reachability",
 ]
 
