--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -33,13 +33,13 @@ byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
 dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
-libc = "0.2.158"
-log = { version = "0.4.*", features = ["std"] }
+libc = "0.2.132"
+logging = { path = "../logging" }
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-simplelog = "0.12.1"
+tracing = "0.1.40"
 zeroize = "1.5.7"
 
 [dev-dependencies]
