--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -28,12 +28,13 @@ bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
 bitcoin_hashes = { version = "0.11.0", default-features = false }
 bitcoinconsensus = { version = "0.19.0-3", optional = true }
 blake3 = "1.3.2"
-bls-signatures = { git = "https://github.com/dashevo/bls-signatures", rev = "a5589e6", features = ["legacy", "bip32", "apple"]  }
+bls-signatures = { git = "https://github.com/knst/bls-signatures", rev = "b4ca778", features = ["legacy", "bip32", "use_serde", "apple"]  }
+
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
 dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
-libc = "0.2.132"
+libc = "0.2.158"
 logging = { path = "../logging" }
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
