--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -31,15 +31,17 @@ bitcoin_hashes = { version = "0.11.0", default-features = false }
 bitcoinconsensus = { version = "0.19.0-3", optional = true }
 blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashevo/bls-signatures", rev = "a5589e6", features = ["legacy", "bip32", "apple"]  }
+#bls-signatures = { git = "https://github.com/knst/bls-signatures", rev = "157cc15e50b6afd68de2d10870f9a5fd2bef38e5", features = ["legacy", "bip32", "apple"]  }
+
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
 dirs-next = "2.0.0"
 ed25519-dalek = "2"
 libc = "0.2.132"
 log = { version = "0.4.*", features = ["std"] }
-#ferment-interfaces = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-interfaces" }
+#ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
 #ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
-ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
+ferment = { path = "../../ferment/ferment" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
 
 rs-x11-hash = "0.1.8"
@@ -55,8 +57,8 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [build-dependencies]
 cbindgen = "0.24.3"
-ferment = { path = "../../ferment/ferment" }
-#ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
+ferment-sys = { path = "../../ferment/ferment-sys" }
+#ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-sys" }
 
 
 [lib]
