--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -11,7 +11,7 @@ dapi-grpc = { path = "../../platform/packages/dapi-grpc" }
 dash-sdk = { path = "../../platform/packages/rs-sdk" }
 drive = { path = "../../platform/packages/rs-drive" }
 drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
-ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
+ferment = { path = "../../ferment/ferment" }
 ferment-macro = { path = "../../ferment/ferment-macro" }
 http = { version = "0.2.12" }
 platform-value = { path = "../../platform/packages/rs-platform-value" }
@@ -20,7 +20,7 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
 
 [build-dependencies]
-ferment = { path = "../../ferment/ferment" }
+ferment-sys = { path = "../../ferment/ferment-sys" }
 
 [lib]
 name = "dash_spv_platform"
