--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -11,7 +11,6 @@ publish = true
 anyhow = { version = "1.0.75" }
 blake3 = "1.3.2"
 byte = "0.2"
-dash-sdk = { path = "../../platform/packages/rs-sdk" }
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
 dash-spv-platform = { path = "../dash-spv-platform" }
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
@@ -21,22 +20,31 @@ dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
     "signer",
     "serde",
 ], default-features = false, branch = "master" }
+dash-sdk = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dash-sdk" }
+dpp = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dpp", features = ["state-transitions"] }
+drive = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive" }
+drive-proof-verifier = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive-proof-verifier" }
+platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-value" }
+platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-version" }
+rs-dapi-client = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "rs-dapi-client" }
 
-dpp = { path = "../../platform/packages/rs-dpp", features = ["state-transitions"] }
-drive = { path = "../../platform/packages/rs-drive" }
-drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
+#dpp = { path = "../../platform/packages/rs-dpp", features = ["state-transitions"] }
+#drive = { path = "../../platform/packages/rs-drive" }
+#drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
+#platform-value = { path = "../../platform/packages/rs-platform-value" }
+#platform-version = { path = "../../platform/packages/rs-platform-version" }
+#rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
 fancy-regex = "0.13.0"
-ferment = { path = "../../ferment/ferment" }
-ferment-macro = { path = "../../ferment/ferment-macro" }
+ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
+ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+#ferment = { path = "../../ferment/ferment" }
+#ferment-macro = { path = "../../ferment/ferment-macro" }
 #ferment = { git = "https://github.com/pankcuf/ferment.git", package = "ferment" }
 #ferment-macro = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-macro" }
-grovedb-version = "1.0.0-rc.2"
+grovedb-version = "2.1.0"
 indexmap = { version = "2.0.2", features = ["serde"] }
-jsonschema = "0.18.0"
-platform-value = { path = "../../platform/packages/rs-platform-value" }
-platform-version = { path = "../../platform/packages/rs-platform-version" }
+jsonschema = "0.22.3"
 regex = { version = "1.10.4" }
-rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 rs-x11-hash = "0.1.8"
 dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore-rpc", tag = "v0.15.2" }
@@ -53,11 +61,12 @@ dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", fea
 
 [build-dependencies]
 cbindgen = "0.26.0"
-ferment-sys = { path = "../../ferment/ferment-sys" }
+ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
 #ferment-sys = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-sys" }
 
 [features]
 cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
+core-types = ["dpp/core-types"]
 data-contract-cbor-conversion = ["dpp/data-contract-cbor-conversion"]
 data-contract-json-conversion = ["dpp/data-contract-json-conversion"]
 data-contract-value-conversion = ["dpp/data-contract-value-conversion"]
@@ -84,6 +93,7 @@ state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
 state-transition-validation = ["dpp/state-transition-validation"]
 state-transition-signing = ["dpp/state-transition-signing"]
 std = ["platform-value/std"]
+system_contracts = ["dpp/system_contracts"]
 validation = ["dpp/validation"]
 
 [lib]
