--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -7,20 +7,29 @@ edition = "2021"
 publish = false
 
 [dependencies]
-dapi-grpc = { path = "../../platform/packages/dapi-grpc" }
-dash-sdk = { path = "../../platform/packages/rs-sdk" }
-drive = { path = "../../platform/packages/rs-drive" }
-drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
-ferment = { path = "../../ferment/ferment" }
-ferment-macro = { path = "../../ferment/ferment-macro" }
+dapi-grpc = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dapi-grpc" }
+dash-sdk = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dash-sdk" }
+drive = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive" }
+drive-proof-verifier = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive-proof-verifier" }
+platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-value" }
+platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-version" }
+#dapi-grpc = { path = "../../platform/packages/dapi-grpc" }
+#dash-sdk = { path = "../../platform/packages/rs-sdk" }
+#drive = { path = "../../platform/packages/rs-drive" }
+#drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
+ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
+ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+#ferment = { path = "../../ferment/ferment" }
+#ferment-macro = { path = "../../ferment/ferment-macro" }
 http = { version = "0.2.12" }
-platform-value = { path = "../../platform/packages/rs-platform-value" }
-platform-version = { path = "../../platform/packages/rs-platform-version" }
+#platform-value = { path = "../../platform/packages/rs-platform-value" }
+#platform-version = { path = "../../platform/packages/rs-platform-version" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
 
 [build-dependencies]
-ferment-sys = { path = "../../ferment/ferment-sys" }
+ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
+#ferment-sys = { path = "../../ferment/ferment-sys" }
 
 [lib]
 name = "dash_spv_platform"
