chore: cbindgen features setup

--- a/dash-spv-apple-bindings/cbindgen.toml
+++ b/dash-spv-apple-bindings/cbindgen.toml
@@ -42,35 +42,35 @@ prefix_with_name = true
 
 [defines]
 "test" = "false"
-#"feature = cbor" = "platform-value/cbor", "dpp/cbor", "dpp/ciborium"
-"feature = core-types" = "dpp/core-types"
-"feature = data-contract-cbor-conversion" = "dpp/data-contract-cbor-conversion"
-"feature = data-contract-json-conversion" = "dpp/data-contract-json-conversion"
-"feature = data-contract-value-conversion" = "dpp/data-contract-value-conversion"
-"feature = document-cbor-conversion" = "dpp/document-cbor-conversion"
-"feature = document-json-conversion" = "dpp/document-json-conversion"
-"feature = document-value-conversion" = "dpp/document-value-conversion"
-"feature = extended-document" = "dpp/extended-document"
-"feature = factories" = "dpp/factories"
-"feature = fee-distribution" = "dpp/fee-distribution"
-"feature = fixtures-and-mocks" = "dpp/fixtures-and-mocks"
-"feature = identity-cbor-conversion" = "dpp/identity-cbor-conversion"
-"feature = identity-json-conversion" = "dpp/identity-json-conversion"
-"feature = identity-value-conversion" = "dpp/identity-value-conversion"
-"feature = json" = "platform-value/serde_json"
-"feature = json-object" = "dpp/json-object"
-"feature = json-schema-validation" = "dpp/json-schema-validation"
-"feature = message-signing" = "dpp/message-signing"
-"feature = mocks" = "dash-sdk/mocks"
-"feature = mock-versions" = "platform-version/mock-versions"
-"feature = platform-value" = "dpp/platform-value"
-"feature = state-transitions" = "false"
-"feature = state-transition-json-conversion" = "dpp/state-transition-json-conversion"
-"feature = state-transition-validation" = "dpp/state-transition-validation"
-"feature = state-transition-signing" = "false"
-"feature = std" = "platform-value/std"
-"feature = system_contracts" = "dpp/system_contracts"
-"feature = validation" = "dpp/validation"
+"feature = cbor" = "CBOR_AND_CBORIUM"
+"feature = core-types" = "DS_CORE_TYPES"
+"feature = data-contract-cbor-conversion" = "DPP_DATA_CONTRACT_CBOR_CONVERSION"
+"feature = data-contract-json-conversion" = "DPP_DATA_CONTRACT_JSON_CONVERSION"
+"feature = data-contract-value-conversion" = "DPP_DATA_CONTRACT_VALUE_CONVERSION"
+"feature = document-cbor-conversion" = "DPP_DOCUMENT_CBOR_CONVERSION"
+"feature = document-json-conversion" = "DPP_DOCUMENT_JSON_CONVERSION"
+"feature = document-value-conversion" = "DPP_DOCUMENT_VALUE_CONVERSION"
+"feature = extended-document" = "DPP_EXTENDED_DOCUMENT"
+"feature = factories" = "DPP_FACTORIES"
+"feature = fee-distribution" = "DPP_FEE_DISTRIBUTION"
+"feature = fixtures-and-mocks" = "DPP_FIXTURES_AND_MOCKS"
+"feature = identity-cbor-conversion" = "DPP_IDENTITY_CBOR_CONVERSION"
+"feature = identity-json-conversion" = "DPP_IDENTITY_JSON_CONVERSION"
+"feature = identity-value-conversion" = "DPP_IDENTITY_VALUE_CONVERSION"
+"feature = json" = "PLATFORM_VALUE_SERDE_JSON"
+"feature = json-object" = "DPP_JSON_OBJECT"
+"feature = json-schema-validation" = "DPP_JSON_SCHEMA_VALIDATION"
+"feature = message-signing" = "DPP_MESSAGE_SIGNING"
+"feature = mocks" = "DASH_SDK_MOCKS"
+"feature = mock-versions" = "PLATFORM_VERSION_MOCK_VERSIONS"
+"feature = platform-value" = "DPP_PLATFORM_VALUE"
+"feature = state-transitions" = "DPP_STATE_TRANSITIONS"
+"feature = state-transition-json-conversion" = "DPP_STATE_TRANSITION_JSON_CONVERSION"
+"feature = state-transition-validation" = "DPP_STATE_TRANSITION_VALIDATION"
+"feature = state-transition-signing" = "DPP_STATE_TRANSITION_SIGNING"
+"feature = std" = "PLATFORM_VALUE_STD"
+"feature = system_contracts" = "DPP_SYSTEM_CONTRACTS"
+"feature = validation" = "DPP_VALIDATION"
 
 #rename_variants = "None"
 ## must_use = "MUST_USE_ENUM"
