chore: setup key bindings

--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -35,10 +35,10 @@ rs-dapi-client = { git = "https://github.com/pankcuf/platform", branch = "test/f
 #platform-version = { path = "../../platform/packages/rs-platform-version" }
 #rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
 fancy-regex = "0.13.0"
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
-ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
-#ferment = { path = "../../ferment/ferment" }
-#ferment-macro = { path = "../../ferment/ferment-macro" }
+#ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+ferment = { path = "../../ferment/ferment" }
+ferment-macro = { path = "../../ferment/ferment-macro" }
 grovedb-version = "2.1.0"
 indexmap = { version = "2.0.2", features = ["serde"] }
 jsonschema = "0.22.3"
@@ -59,8 +59,8 @@ dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", fea
 
 [build-dependencies]
 cbindgen = "0.27.0"
-ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
-#ferment-sys = { git = "https://github.com/pankcuf/ferment.git", package = "ferment-sys" }
+ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys", features = ["objc"] }
+#ferment-sys = { path = "../../ferment/ferment-sys" }
 
 [features]
 cbor = ["platform-value/cbor", "dpp/cbor", "dpp/ciborium"]
@@ -84,6 +84,7 @@ json-schema-validation = ["dpp/json-schema-validation"]
 message-signing = ["dpp/message-signing"]
 mocks = ["dash-sdk/mocks"]
 mock-versions = ["platform-version/mock-versions"]
+objc = ["ferment-sys/objc"]
 platform-value = ["dpp/platform-value"]
 #serde = ["dash-spv-masternode-processor/serde"]
 state-transitions = ["dpp/state-transitions"]
