--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -37,10 +37,10 @@ dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
 libc = "0.2.158"
 log = { version = "0.4.*", features = ["std"] }
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
-ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
-#ferment = { path = "../../ferment/ferment" }
-#ferment-macro = { path = "../../ferment/ferment-macro" }
+#ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+ferment = { path = "../../ferment/ferment" }
+ferment-macro = { path = "../../ferment/ferment-macro" }
 
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
@@ -56,8 +56,8 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [build-dependencies]
 cbindgen = "0.24.3"
-#ferment-sys = { path = "../../ferment/ferment-sys" }
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
+ferment-sys = { path = "../../ferment/ferment-sys" }
+#ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
 
 
 [lib]
