--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
-#ferment = { path = "../../ferment/ferment" }
-#ferment-macro = { path = "../../ferment/ferment-macro" }
+ferment = { path = "../../ferment/ferment" }
+ferment-macro = { path = "../../ferment/ferment-macro" }
 #dapi-grpc = { path = "../../platform/packages/dapi-grpc" }
 #dash-sdk = { path = "../../platform/packages/rs-sdk" }
 #drive = { path = "../../platform/packages/rs-drive" }
@@ -21,15 +21,15 @@ drive = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", 
 drive-proof-verifier = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive-proof-verifier" }
 platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-value" }
 platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-version" }
-ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
-ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
+#ferment = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment" }
+#ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-macro" }
 http = { version = "0.2.12" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
 
 [build-dependencies]
-ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
-#ferment-sys = { path = "../../ferment/ferment-sys" }
+#ferment-sys = { git = "https://github.com/pankcuf/ferment", branch = "feat/reorg", package = "ferment-sys" }
+ferment-sys = { path = "../../ferment/ferment-sys" }
 
 [lib]
 name = "dash_spv_platform"
