--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash_spv_apple_bindings"
-version = "0.4.18"
+version = "0.4.19"
 description = "C-bindings for using and interoperating with Dash SPV"
 readme = "README.md"
 edition = "2021"
@@ -48,6 +48,7 @@ regex = { version = "1.10.4" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 rs-x11-hash = "0.1.8"
 dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore-rpc", tag = "v0.15.2" }
+serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 thiserror = { version = "1.0.64" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
@@ -56,9 +57,8 @@ tokio-util = { version = "0.7.10" }
 [dev-dependencies]
 libc = "0.2.146"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
-serde = { version = "1.0.144", features = ["derive"] }
-serde_json = "1.0.85"
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default", "test-helpers"] }
+serde = { version = "1.0.209", features = ["derive"] }
 
 [build-dependencies]
 cbindgen = "0.27.0"
@@ -96,6 +96,8 @@ state-transition-validation = ["dpp/state-transition-validation"]
 state-transition-signing = ["dpp/state-transition-signing"]
 std = ["platform-value/std"]
 system_contracts = ["dpp/system_contracts"]
+test-helpers = ["dash-spv-masternode-processor/test-helpers"]
+use_serde = ["serde", "dash-spv-masternode-processor/use_serde"]
 validation = ["dpp/validation"]
 
 [lib]
