--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -13,8 +13,7 @@ rand = ["secp256k1/rand-std"]
 secp-lowmemory = ["secp256k1/lowmemory"]
 secp-recovery = ["secp256k1/recovery"]
 generate-dashj-tests = []
-test-helpers = []
-#serde = ["use_serde"]
+use_serde = ["serde"]
 # At least one of std, no-std must be enabled.
 #
 # The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
@@ -32,7 +31,6 @@ blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", rev = "4e070243aed142bc458472f8807ab77527dd879a", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
-#dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default", "test-helpers"] }
 dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
 libc = "0.2.158"
@@ -44,7 +42,7 @@ ferment-macro = { git = "https://github.com/pankcuf/ferment", branch = "feat/reo
 
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
-serde = { version = "1.0.209", features = ["derive"], optional = true }
+serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = "1.0.85"
 simplelog = "0.12.2"
 zeroize = "1.5.7"
